Item Views: cancel flicking before programmatic absolute positioning

When the velocity timeline is driving movement and simultaneously
someone calls positionViewAtIndex(), it gets very confused and goes
on creating and destroying delegates for a very long time.  So now we
cancel the flicking animation immediately when calling any of the
positionViewAt* invokables.

Fixes: QTBUG-70941
Change-Id: I85e09344e79356b877a57ab634f72be1d7f93fca
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>